--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
 	<title>Aarick Farist</title>
 	<!-- RESET -->
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<header><h1>HEADER</h1></header>
-	<section><h1>SECTION</h1></section>
-	<footer><h1>FOOTER</h1></footer>
+	<header>
+		<!-- BEGIN NAVBAR -->
+		<div class="container">
+			<h1 id="name">Aarick Farist</h1>
+			<ul>
+				<li>About</li>
+				<li>Portfolio</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+		<!-- END NAVBAR -->
+	</header>
+	<section>
+		<h1>SECTION</h1>
+	</section>
+	<footer>
+		<h1>FOOTER</h1>
+	</footer>
 </body>
 </html>
