--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Aarick Farist</title>
 	<!-- RESET -->
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
