Added styling to navbar on all html pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Aarick Farist</title>
 	<!-- RESET -->
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -13,9 +13,9 @@
 		<div class="container">
 			<h1 id="name">Aarick Farist</h1>
 			<ul>
-				<li>About</li>
-				<li>Portfolio</li>
-				<li>Contact</li>
+				<li><a href="index.html">About</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<!-- END NAVBAR -->
