--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<div class="container">
 			<h1 id="name">Aarick Farist</h1>
 			<ul>
-				<li>About</li>
-				<li>Portfolio</li>
-				<li>Contact</li>
+				<li><a href="#">About</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<!-- END NAVBAR -->
