finished structuring the layout of the html pages, just need to add content and implement full responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<!-- BEGIN NAVBAR -->
-		<div class="container">
+		<div class="container verticle-center">
 			<h1 id="name">Aarick Farist</h1>
 			<ul>
 				<li><a href="index.html">About</a></li>
@@ -21,10 +21,19 @@
 		<!-- END NAVBAR -->
 	</header>
 	<section>
-		<h1>SECTION</h1>
+		<div class="container">
+			<!-- BEGIN CONTENT SECTION -->
+			<div class="content">
+				<h1 class="content-header">Portfolio</h1>
+			</div>
+			<div class="aside">
+				<h1 class="aside-header">Connect with me</h1>
+			</div>
+			<!-- END CONTENT SECTION -->
+		</div>
 	</section>
 	<footer>
-		<h1>FOOTER</h1>
+		<h1 class="footer-content">Copyright 2018 Aarick Farist</h1>
 	</footer>
 </body>
 </html>
