added images, finished index page and finished aside section on all pages

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- FONT AWESOME ICONS -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 	<header>
@@ -28,6 +30,11 @@
 			</div>
 			<div class="aside">
 				<h1 class="aside-header">Connect with me</h1>
+				<ul class="links">
+					<li><a href="https://github.com/Aarick-F" target="_blank"><i class="fab fa-github-square fa-4x"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/afarist/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a></li>
+					<li><a href="https://stackoverflow.com/users/8902821/aarick-f" target="_blank"><i class="fab fa-stack-overflow fa-4x"></i></a></li>
+				</ul>
 			</div>
 			<!-- END CONTENT SECTION -->
 		</div>
