--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- FONT AWESOME ICONS -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 	<header>
@@ -25,11 +27,30 @@
 			<!-- BEGIN CONTENT SECTION -->
 			<div class="content">
 				<h1 class="content-header">About Me</h1>
-			</div>
-			<div class="aside">
-				<h1 class="aside-header">Connect with me</h1>
+				<div class="innards">
+					<img id="me" src="assets/images/me.jpg" alt="A weirdo">
+					<p class="photo-text line-space">Greetings! My name is Aarick Farist. I am an aspiring full-stack web developer;
+					thank you for taking interest in my work! This site is meant to showcase my work and provide
+					a means for you to get in contact with me.</p>
+				</div>
+				<p class="text line-space">I play Dungeons & Dragons as a Half-Elf Bard, sing and play guitar for a punk band,
+				and enjoy getting lost in an interesting video-game for hours. It is my hope that the creativity I surround
+				myself with will drive me to always make my craft interesting and unique.</p> 
+
+				<p class="text line-space">To me, web design sits at the perfect intersection of artistic expression
+				and lucrative business opportunities. I intend to make a mark in this industry!</p>
 			</div>
 			<!-- END CONTENT SECTION -->
+			<!-- BEGIN ASIDE SECTION -->
+			<div class="aside">
+				<h1 class="aside-header">Connect with me</h1>
+				<ul class="links">
+					<li><a href="https://github.com/Aarick-F" target="_blank"><i class="fab fa-github-square fa-4x"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/afarist/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a></li>
+					<li><a href="https://stackoverflow.com/users/8902821/aarick-f" target="_blank"><i class="fab fa-stack-overflow fa-4x"></i></a></li>
+				</ul>
+			</div>
+			<!-- END ASIDE SECTION -->
 		</div>
 	</section>
 	<footer>
