--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/contactStyle.css">
 	<!-- FONT AWESOME ICONS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
@@ -29,6 +30,17 @@
 			<!-- BEGIN CONTENT SECTION -->
 			<div class="content">
 				<h1 class="content-header">Contact</h1>
+				<div class="contactForm">
+					<h2>Name</h2>
+					<input type="text" name="name" placeholder="John Smith">
+					<h2>Email</h2>
+					<input type="Email" name="email" placeholder="jsmith@example.com">
+					<h2>Message</h2>
+					<div class="fakeMessage">
+						<p>This is a fake input box :/</p>
+					</div>
+					<div class="button"><h3>Submit</h3></div>
+				</div>
 			</div>
 			<div class="aside">
 				<h1 class="aside-header">Connect with me</h1>
