--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- MY STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/portfolioStyle.css">
 	<!-- FONT AWESOME ICONS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
@@ -29,6 +30,13 @@
 			<!-- BEGIN CONTENT SECTION -->
 			<div class="content">
 				<h1 class="content-header">Portfolio</h1>
+				<ul class="portfolioContent">
+					<li class="portfolioItem"><h3><a href="http://kidmacho.com/" target="_blank">Kid Macho</a></h3></li>
+					<li class="portfolioItem"><h3><a href="https://aarick-f.github.io/project-superjuke/" target="_blank">SUPERJUKE (WIP)</a></h3></li>
+					<li class="portfolioItem"><h3><a href="https://aarick-f.github.io/twist-loader/" target="_blank">CSS Loader - Twist</a></h3></li>
+					<li class="portfolioItem"><h3><a href="https://aarick-f.github.io/flight-loader/" target="_blank">CSS Loader - Flight</a></h3></li>
+					<li class="portfolioItem"><h3><a href="https://aarick-f.github.io/scoot-loader/" target="_blank">CSS Loader - Scoot</a></h3></li>
+				</ul>
 			</div>
 			<div class="aside">
 				<h1 class="aside-header">Connect with me</h1>
